Edited wiki page Manual through web user interface.

--- a/wiki/Manual.wiki
+++ b/wiki/Manual.wiki
@@ -162,7 +162,7 @@ Gowinda does not reproduce the exact pattern of linkage disequilibrium (LD) betw
 The first strategy (`--mode snp`) assumes linkage equilibrim between SNPs and the second strategy (`--mode gene`) assumes complete linkage disequilibrium between SNPs within a gene, thus basically treating every gene as a large haplotype.
 
 === Analysis mode SNP ===
-This strategy is based on the extreme assumption that all SNPs are independent, i.e.: in linkage equilibrium. In this mode of operation, Gowinda randomly samples the same number of SNPs as candidate SNPs. Subsequently the genes corresponding to the sampled SNPs are identified. Finally the significance of enrichment is estimated from the empirical null distribution and FDR is calculated (see below). The number of SNPs is thus constant (=number of candidate SNPs) in each simulation. However the number of genes associated with the randomly sampled SNPs may vary between the simulations. Furthermore, when using this strategy, genes will be counted multiple times according to the number of candidate/random SNPs. This is based on the rationale that - when SNPs are in linkage equilibrium - every candidate SNP constitutes an independent observation. However any remaining linkage between variants will cause a bias in this strategy, as linkage will lead to a clustering of candidate SNPs which may in turn result in overestimating the significance of enrichment.
+This strategy is based on the extreme assumption that all SNPs are independent, i.e.: in linkage equilibrium. In this mode of operation, Gowinda randomly samples the same number of SNPs as candidate SNPs. Subsequently the genes corresponding to the sampled SNPs are identified. Finally the significance of enrichment is estimated from the empirical null distribution and FDR is calculated (see below). The number of SNPs is thus constant (=number of candidate SNPs) in each simulation. However the number of genes associated with the randomly sampled SNPs may vary between the simulations. Furthermore, when using this strategy, genes will be counted multiple times according to the number of candidate/random SNPs. This is based on the rationale that - when SNPs are in linkage equilibrium - every candidate SNP constitutes an independent observation. However any remaining linkage between variants will cause a bias in this strategy, that is the significance of enrichment will be overestimated.
 
 
 === Analysis mode gene ===
